--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
       box-sizing: border-box;
       background:#ffc600;
-      font-family: 'Arial Narrow';
+      font-family:'helvetica neue';
       font-size: 20px;
       font-weight: 200;
     }
@@ -68,7 +68,6 @@ html {
       font-family: 'Arial Narrow', cursive;
       text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
       font-size: 2em;
-      
     }
     .panel p:nth-child(2) {
       font-size: 4em;
